--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
     <div class="container">
         <div class = "title">
             <h1>Has BC Become More Diverse? <br><i style="font-size:35px">A look into the past 45 years</i></h1>
-            <h5>Below we look at how the BC population has changed by ethnicity, gender, geographical region, and international status over the past 45 years. We also compared the ethnicity and gender distribution at BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based off of their 2020 demographics. From these visualizations, we are better able to understand the demographic changes at BC and the extent to which it has become more diverse.</h5>  
+            <h5>Below we look at how the BC population has changed by ethnicity, gender, geographical region, and 
+                international status over the past 45 years. We also compared the ethnicity and gender distribution at 
+                BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based 
+                off of their 2020 demographics. From these visualizations, we are better able to understand the demographic 
+                changes at BC and the extent to which it has become more diverse.</h5>  
         </div>
         <div class = "viz-container">
             <h3>Changes in Gender Distribution</h3>
-            <h5>The overall number of students enrolled in Boston College has been variable throughout the last 45 years, starting at a total of 9,899 in 1976 and increasing to a total of 10,767 enrolled students in 1980 before showing a generally decreasing trend down to a total of 9,445 enrolled students in the Fall of 2020. The university first went co-ed in 1970, with the first fully coeducational class graduating in the Spring of 1974. Throughout the past 45 years, the number of male and female students has varied alongside the total number of enrolled students.</h5>
+            <h5>The overall number of students enrolled in Boston College has been variable throughout the last 45 years, 
+                starting at a total of 9,899 in 1976 and increasing to a total of 10,767 enrolled students in 1980 before 
+                showing a generally decreasing trend down to a total of 9,445 enrolled students in the Fall of 2020. The 
+                university first went co-ed in 1970, with the first fully coeducational class graduating in the Spring of 1974. 
+                Throughout the past 45 years, the number of male and female students has varied alongside the total number of 
+                enrolled students.</h5>
             <div class = "row gender">
                 <div class = "column">
                     <div id="chartContainer">
@@ -38,10 +47,16 @@
                     </div>
                 </div>
                 <div class = "column">
-                    <h5><br><br><br>We see that the number of female students enrolled in Boston College has consistently been greater than the number of male students over the past 45 years.  The difference was the most pronounced between 1980 and 1990, which interestingly corresponds very closely to the higher total number of students enrolled in those years.  Thus, it seems that in these years of higher enrollment, the majority of the additional enrolled students were female rather than male. Since then, the gap between the number of male and female students narrowed to a nearly constant difference until 2010, since when it has begun to widen once again.</h5>
+                    <h5><br><br><br>We see that the number of female students enrolled in Boston College has consistently 
+                        been greater than the number of male students over the past 45 years.  The difference was the most 
+                        pronounced between 1980 and 1990, which interestingly corresponds very closely to the higher total 
+                        number of students enrolled in those years.  Thus, it seems that in these years of higher enrollment, 
+                        the majority of the additional enrolled students were female rather than male. Since then,the gap 
+                        between the number of male and female students narrowed to a nearly constant difference until 2010, 
+                        since when it has begun to widen once again.</h5>
                 </div>
             </div>
-            <h5>Despite the differences in the number of students of each gender over time, the percent of students of each gender has stayed reasonably constant at about 47-48% male. However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
+            <h5>Despite the differences in the number of students of each gender over time, <mark>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</mark> However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
         </div>
         <div class = "viz-container">
             <h5><br>Thus, the overall gender trends of the Boston College population as a whole has been majority-female. Where we begin to see more of a difference in male-female representation is in the different individual schools within BC.</h5>
@@ -59,8 +74,8 @@
             <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of BC, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
             <div class = "row ethnicity">
                 <div id = "stacked-area"></div>
-                <h5>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
-                    steadily throughout the years. Notably, the Asian population of the school has steadily increased in the past 
+                <h5><mark>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
+                    steadily throughout the years. </mark>Notably, the Asian population of the school has steadily increased in the past 
                     45 years, while the Native American population has been consistently low. The Hispanic and Black populations 
                     have been reasonably variable throughout the years, showing no consistent pattern of growth. The two or more
                     races category refers to students who identify with more than one race or ethnicity.</h5>
@@ -81,13 +96,19 @@
                     <div id = "dot-plot"></div>
                 </div>
                 <div class = "column">
-                    <h5><br><br><br>The undergrad population of BC is considerably and consistently more white than the USA population, and has been for the duration of the past 45 years. Additionally, the Asian population of BC has been increasingly over-represented within the BC community compared with the USA overall to an approximately 100% difference in 2020. The Black and Hispanic populations have been consistently under-represented at BC by reasonably consistent margins, and it is evident that this problem has shown no signs of decreasing.</h5>
+                    <h5><br><br><br><mark>The undergrad population of BC is considerably and consistently more white than the USA population, </mark>
+                        and has been for the duration of the past 45 years. Additionally, <mark>the Asian population of BC has been 
+                        increasingly over-represented within the BC community </mark>compared with the USA overall to an approximately 
+                        100% difference in 2020. <mark>The Black and Hispanic populations have been consistently under-represented at 
+                        BC by reasonably consistent margins, </mark> and it is evident that this problem has shown no signs of decreasing.</h5>
                 </div>
             </div>
          </div>     
         <div class = "viz-container">
             <h3>Changes in Geographic Distribution</h3>
-            <h5>As we have seen, despite the gender breakdown remaining constant, the ethnic diversity of enrolled students shows signs of increasing. It seems that, in accordance with the increase in ethnic diversity, the geographic distribution of students has been increasing as well.</h5>
+            <h5>As we have seen, despite the gender breakdown remaining constant, the ethnic diversity of enrolled students 
+                shows signs of increasing. It seems that, in accordance with the increase in ethnic diversity, the geographic 
+                distribution of students has been increasing as well.</h5>
             <div class = "row map">
                 <div class = "column">
                     <p><strong>Number of Students from Each State in 1976</strong></p>
@@ -114,12 +135,19 @@
                     <div class = "map-2020"></div>
                 </div>
             </div>
-            <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), the overall distribution has become much more even. The change is particularly noticeable for states such as California, Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, such as Midwest states outside of the Great Lakes region and the majority of Southern States.</h5>
+            <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, 
+                with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, 
+                the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside 
+                of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. 
+                <mark>While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), 
+                the overall distribution has become much more even.</mark> The change is particularly noticeable for states such as California, 
+                Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, 
+                such as Midwest states outside of the Great Lakes region and the majority of Southern States.</h5>
         </div>
         <div class = "viz-container">
             <div class = "row international">
                 <div class = "column">
-                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students, the percent of international students at BC has increased considerably since 1976.</h5>  
+                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students,<mark> the percent of international students at BC has increased considerably since 1976.</mark></h5>  
                 </div>
                 <div class = "column">
                     <div id = "intl-line-chart"></div>
@@ -133,10 +161,17 @@
             <div class = "row comparison">
                 <div class = "column">
                     <div id = "stacked-bar"></div>
-                    <h5><br><br><br>Each of the schools that we looked at (and the United States in general) were also majority-White, though BU, Georgetown and Northeastern are to a lesser extent. Notre Dame actually had a more prominent White majority than any other school, and was significantly less represented in the Asian population than the others. In general, the Asian population was over-represented across all schools in comparison to the US, while the Hispanic population seems to be generally on-par with that of the US. However, both the Black and Native American populations are under-represented at all schools compared to USA totals, with the Native American populations being nearly non-existent at each university.</h5>  
+                    <h5><br><br><br><mark>Each of the schools that we looked at (and the United States in general) were also 
+                        majority-White, though BU, Georgetown and Northeastern are to a lesser extent.</mark> Notre Dame 
+                        actually had a more prominent White majority than any other school, and was significantly less 
+                        represented in the Asian population than the others. In general, the Asian population was 
+                        over-represented across all schools in comparison to the US, while the Hispanic population seems 
+                        to be generally on-par with that of the US. <mark>However, both the Black and Native American populations
+                         are under-represented at all schools compared to USA totals, with the Native American populations 
+                         being nearly non-existent at each university.</mark></h5>  
                 </div>
                 <div class = "column">
-                    <h5><br><br><br>Almost all of the peer institutions that we examined shared BC's majority-female demographics, with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
+                    <h5><br><br><br><mark>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </mark>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
                     <div id = "stacked-bar2"></div>
                 </div>
             </div>
