--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class = "row gender">
                 <div class = "column">
                     <div id="chartContainer">
-                        <button id="button" class = "button">Update Chart Type</button>
+                        <button id="button" class = "button">Show Percentage Breakdown</button>
                         <p><strong>Number of Enrolled Undergraduate Students of Each Gender</strong></p>
                         <div class = "line-chart"></div>
                     </div>
