--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
                     <div class = "map-1976"></div>
                 </div>
                 <div class = "column">
-                    <p><i>Click on a state or zoom in for more detail!</i></p>
+                    <p><i>Click on a state for more detail!</i></p>
                     <p id = "state-name">Alabama</p>
                     <p id = "state-info">
-                        1976: 2<br>
-                        1980: 1 <br>
-                        1985: 3<br>
-                        1990: 11<br>
-                        1995: 13<br>
-                        2000: 10<br>
-                        2005: 10<br>
-                        2010: 11<br>
-                        2015: 7<br>
-                        2020: 21
+                        1976: 2 students<br>
+                        1980: 1 students <br>
+                        1985: 3 students<br>
+                        1990: 11 students<br>
+                        1995: 13 students<br>
+                        2000: 10 students<br>
+                        2005: 10 students<br>
+                        2010: 11 students<br>
+                        2015: 7 students<br>
+                        2020: 21 students
                     </p>
                 </div>
                 <div class = "column">
@@ -191,6 +191,7 @@
             </h5>
         </div>
     </div>
+    <a class = "button about" href = "about.html">Project Information</a>
     <div id ="map-tooltip" class = "hidden tooltip"></div>
     <div id="bar-tooltip" class="hidden tooltip"></div>
     <div id="line-tooltip" class="hidden tooltip"></div>
