--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Project 3</title>
+    <title>About</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
@@ -14,4 +14,23 @@
 
 </head>
 <body>
+    <div class = "container">
+        <div class = "title">
+            <h1>Project Information</h1>
+            <h3>Group Members: Christina MacKenzie, Grace Myers, Anna Bolger, and Anthony Manev</h3>
+        </div>
+        <div class = "response">
+            <h2>Project Motivation</h2>
+        </div>
+        <div class = "response">
+            <h2>Data Processing</h2>
+        </div>
+        <div class = "response">
+            <h2>Design Processes</h2>
+        </div>
+        <div class = "response">
+            <h2>Showcase Video</h2>
+        </div>
+        <a class = "button back" href = "index.html">Back</a>
+    </div>
 </body>
