add population map

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
                     <div class = "map-2020"></div>
                 </div>
             </div>
+            <div class = "row map2">
+                <div class = "column">
+                    <p><strong>Population Distribution of the United States as a Whole in 2020</strong>
+                    <div class = "map-us"></div>
+                </div>
+            </div>
             <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, 
                 with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, 
                 the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside 
