--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <body>
     <div class="container">
         <div class = "title">
-            <h1>Has BC Become More Diverse? <br><i style="font-size:35px">A look into the past 45 years</i></h1>
-            <h5>Below we look at how the BC population has changed by ethnicity, gender, geographical region, and 
+            <h1>Has BC Become More Diverse? <br><i style="font-size:30px;color:#b29d6c;">A look into the past 45 years at Boston College</i></h1>
+            <h5>Below we examine how the Boston College (BC) undergraduatepopulation has changed by ethnicity, gender, geographical region, and 
                 international status over the past 45 years. We also compared the ethnicity and gender distribution at 
                 BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based 
-                off of their 2020 demographics. From these visualizations, we are better able to understand the demographic 
-                changes at BC and the extent to which it has become more diverse.</h5>  
+                off of their 2020 demographics.<br><i>All of the information included is based on undergraduate students only and is gathered from the BC Factbook Archives.</i></h5>  
         </div>
         <div class = "viz-container">
             <h3>Changes in Gender Distribution</h3>
+            <h4>Student Body Overview</h4>
             <h5>The overall number of students enrolled in Boston College has been variable throughout the last 45 years, 
                 starting at a total of 9,899 in 1976 and increasing to a total of 10,767 enrolled students in 1980 before 
                 showing a generally decreasing trend down to a total of 9,445 enrolled students in the Fall of 2020. The 
@@ -47,7 +47,9 @@
                     </div>
                 </div>
                 <div class = "column">
-                    <h5><br><br><br>We see that the number of female students enrolled in Boston College has consistently 
+                    <br>
+                    <h4>Male-Female Breakdown</h4>
+                    <h5>We see that the number of female students enrolled in Boston College has consistently 
                         been greater than the number of male students over the past 45 years.  The difference was the most 
                         pronounced between 1980 and 1990, which interestingly corresponds very closely to the higher total 
                         number of students enrolled in those years.  Thus, it seems that in these years of higher enrollment, 
@@ -56,7 +58,8 @@
                         since when it has begun to widen once again.</h5>
                 </div>
             </div>
-            <h5>Despite the differences in the number of students of each gender over time, <mark>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</mark> However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
+            <h4>Overall Little Change</h4>
+            <h5>Despite the differences in the number of students of each gender over time, <b>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</b>However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
         </div>
         <div class = "viz-container">
             <h5><br>Thus, the overall gender trends of the Boston College population as a whole has been majority-female. Where we begin to see more of a difference in male-female representation is in the different individual schools within BC.</h5>
