--- a/index.html
+++ b/index.html
@@ -58,19 +58,24 @@
                         since when it has begun to widen once again.</h5>
                 </div>
             </div>
-            <h4>Overall Little Change</h4>
-            <h5>Despite the differences in the number of students of each gender over time, <b>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</b>However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
+            <h4>Overall Minimal Gender Distribution Change</h4>
+            <h5>Despite the differences in the number of students of each gender over time, <b>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</b> However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
         </div>
         <div class = "viz-container">
-            <h5><br>Thus, the overall gender trends of the Boston College population as a whole has been majority-female. Where we begin to see more of a difference in male-female representation is in the different individual schools within BC.</h5>
+            <br>
+            <h4>Gender Distribution by School</h4>
+            <h5>The overall gender trends of the Boston College population has been that the university is majority-female. Where we begin to see more of a difference in male-female representation is within the  individual schools at BC.</h5>
             <p><i>Note: Boston College did not begin publishing the gender breakdown of students enrolled in each school until the year 1985.</i></p>
             <p><strong>Gender Distribution within Each of BC's Different Schools</strong></p>
             <div class = "pie-chart">
                 <div id = "school-pie-chart"></div>
             </div>
-            <h5>The Morrissey College of Arts & Sciences, BC's largest school, has reflected these trends the most closely.  Where we begin to see larger divides are the schools aimed towards fields which are traditionally dominated more by a single gender. Both the Lynch School of Education and Connell School of Nursing have been consistently female-dominated since 1976 by large, relatively consistent margins.</h5>
+            <h4>MCAS and Woods College</h4>
+            <h5>The Morrissey College of Arts & Sciences, BC's largest school, has reflected the overall university gender trends the most closely. This is likely due to the wide variety of majors in MCAS that interest both male and female students. Conversely, The Woods College of Advancing Studies has shown the most drastic change in gender demographics since 1985. While the school initially showed a female majority in 1985, the distribution has steadily changed to being majority-male as of 2020.</h5>
+            <h4>Gender Discrepencies in Business, Education and Nursing Schools</h4>
+            <h5>Where we begin to see larger divides in the gender distribution are in the schools aimed towards fields which are traditionally dominated more by a single gender. Both the Lynch School of Education and Connell School of Nursing have been consistently female-dominated since 1976 by large, relatively consistent margins. There has been almost no increase in male representation within the LSOE since 2000, However, though there is a disproportinate representation of females in CSON, it has been gradually increasing since 2000. </h5>
             <h5>On the other hand, the Carroll School of Management has consistantly been male-dominated since 1985, showing a clear departure from the overall tendency of the school to being majority female. The majority-male makeup of this school has actually become more pronounced over time, increasing from being 53% male in 1985 to 67% male in 2020. Given the overall increase in women in business across the world in the same time period, this trend is especially surprising.</h5>
-            <h5>The Woods College of Advancing Studies has shown the most drastic change in gender demographics since 1985. While the school initially showed a female majority in 1985, the distribution has steadily changed to being majority-male as of 2020.</h5>
+            
         </div>
         <div class = "viz-container">
             <h3>Changes in Ethnic Distribution</h3>
