--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h5>Below we examine how the Boston College (BC) undergraduatepopulation has changed by ethnicity, gender, geographical region, and 
                 international status over the past 45 years. We also compared the ethnicity and gender distribution at 
                 BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based 
-                off of their 2020 demographics.<br><i>All of the information included is based on undergraduate students only and is gathered from the BC Factbook Archives.</i></h5>  
+                off of their 2020 demographics.<br><i>***All of the information included below is based on undergraduate students only and is gathered from the BC Factbook Archives.</i></h5>  
         </div>
         <div class = "viz-container">
             <h3>Changes in Gender Distribution</h3>
@@ -58,7 +58,7 @@
                         since when it has begun to widen once again.</h5>
                 </div>
             </div>
-            <h4>Overall Minimal Gender Distribution Change</h4>
+            <h4>Gender Distribution Change Overall</h4>
             <h5>Despite the differences in the number of students of each gender over time, <b>the percent of students of each gender has stayed reasonably constant at about 47-48% male.</b> However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
         </div>
         <div class = "viz-container">
@@ -79,36 +79,41 @@
         </div>
         <div class = "viz-container">
             <h3>Changes in Ethnic Distribution</h3>
+            <h4>Distribution Overview</h4>
             <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of BC, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
             <div class = "row ethnicity">
                 <div id = "stacked-area"></div>
-                <h5><mark>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
-                    steadily throughout the years. </mark>Notably, the Asian population of the school has steadily increased in the past 
-                    45 years, while the Native American population has been consistently low. The Hispanic and Black populations 
-                    have been reasonably variable throughout the years, showing no consistent pattern of growth. The two or more
+                <h5><strong>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
+                    steadily throughout the years. </strong>Notably, the Asian population of the school has steadily increased in the past 
+                    45 years, while the Native American population has been consistently low. <strong>The Hispanic and Black populations 
+                    have been reasonably variable throughout the years, showing no consistent pattern of growth.</strong> The two or more
                     races category refers to students who identify with more than one race or ethnicity.</h5>
             </div>
             <div class = "row twomore">
                 <div class = "column">
-                    <h5><br><br><br>Furthermore, BC introduced a new "two or more races" category into its statistics in 2010. The visualization to the right breaks down the percent of students selecting the "two or more races" category who identify the given ethnicity as one of them. A high number of those identifying as two or more races identified either Hispanic or White as one them, which could possibly skew some of the patterns seen in the distribution of these ethnicities.</h5>
+                    <br><br><br>
+                    <h4>"Two or More Races" Breakdown</h4>
+                    <h5>Furthermore, BC introduced a new "two or more races" category into its statistics in 2010. The visualization to the right breaks down the percent of students selecting the "two or more races" category who identify the given ethnicity as one of them. A high number of those identifying as two or more races identified either Hispanic or White as one them, which could possibly skew some of the patterns seen in the distribution of these ethnicities.</h5>
                 </div>
                 <div class = "column">
                     <p><i>Adjust the year slider below to begin!</i></p>
                     <div id = "two-more-bar"></div>
                 </div>
             </div>
-            <h5>To gain further insight into these ethnic distributions, we wanted to see how the distributions of BC compared to those of the United States overall.</h5>
+            <br>
             <div class = "row us-compare">
                 <div class = "column">
                     <p><i>Adjust the year slider below to begin!</i></p>
                     <div id = "dot-plot"></div>
                 </div>
                 <div class = "column">
-                    <h5><br><br><br><mark>The undergrad population of BC is considerably and consistently more white than the USA population, </mark>
-                        and has been for the duration of the past 45 years. Additionally, <mark>the Asian population of BC has been 
-                        increasingly over-represented within the BC community </mark>compared with the USA overall to an approximately 
-                        100% difference in 2020. <mark>The Black and Hispanic populations have been consistently under-represented at 
-                        BC by reasonably consistent margins, </mark> and it is evident that this problem has shown no signs of decreasing.</h5>
+                    <br><br>
+                    <h4>BC Students Compared to US</h4>
+                    <h5>To gain further insight into these ethnic distributions, we wanted to see how the distributions of BC compared to those of the United States overall.<strong>The undergrad population of BC is considerably and consistently more white than the USA population, </strong>
+                        and has been for the duration of the past 45 years. Additionally, <strong>the Asian population of BC has been 
+                        increasingly over-represented within the BC community </strong>compared with the USA overall to an approximately 
+                        100% difference in 2020. <strong>The Black and Hispanic populations have been consistently under-represented at 
+                        BC by reasonably consistent margins, </strong> and it is evident that this problem has shown no signs of decreasing.</h5>
                 </div>
             </div>
          </div>     
@@ -153,15 +158,15 @@
                 with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, 
                 the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside 
                 of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. 
-                <mark>While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), 
-                the overall distribution has become much more even.</mark> The change is particularly noticeable for states such as California, 
+                <strong>While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), 
+                the overall distribution has become much more even.</strong> The change is particularly noticeable for states such as California, 
                 Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, 
                 such as Midwest states outside of the Great Lakes region and the majority of Southern States.</h5>
         </div>
         <div class = "viz-container">
             <div class = "row international">
                 <div class = "column">
-                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students,<mark> the percent of international students at BC has increased considerably since 1976.</mark></h5>  
+                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students,<strong> the percent of international students at BC has increased considerably since 1976.</strong></h5>  
                 </div>
                 <div class = "column">
                     <div id = "intl-line-chart"></div>
@@ -175,17 +180,17 @@
             <div class = "row comparison">
                 <div class = "column">
                     <div id = "stacked-bar"></div>
-                    <h5><br><br><br><mark>Each of the schools that we looked at (and the United States in general) were also 
-                        majority-White, though BU, Georgetown and Northeastern are to a lesser extent.</mark> Notre Dame 
+                    <h5><br><br><br><strong>Each of the schools that we looked at (and the United States in general) were also 
+                        majority-White, though BU, Georgetown and Northeastern are to a lesser extent.</strong> Notre Dame 
                         actually had a more prominent White majority than any other school, and was significantly less 
                         represented in the Asian population than the others. In general, the Asian population was 
                         over-represented across all schools in comparison to the US, while the Hispanic population seems 
-                        to be generally on-par with that of the US. <mark>However, both the Black and Native American populations
+                        to be generally on-par with that of the US. <strong>However, both the Black and Native American populations
                          are under-represented at all schools compared to USA totals, with the Native American populations 
-                         being nearly non-existent at each university.</mark></h5>  
+                         being nearly non-existent at each university.</strong></h5>  
                 </div>
                 <div class = "column">
-                    <h5><br><br><br><mark>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </mark>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
+                    <h5><br><br><br><strong>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </strong>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
                     <div id = "stacked-bar2"></div>
                 </div>
             </div>
