--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
          </div>     
         <div class = "viz-container">
             <h3>Changes in Geographic Distribution</h3>
+            <h4>Distribution Overview</h4>
             <h5>As we have seen, despite the gender breakdown remaining constant, the ethnic diversity of enrolled students 
                 shows signs of increasing. It seems that, in accordance with the increase in ethnic diversity, the geographic 
                 distribution of students has been increasing as well.</h5>
@@ -154,25 +155,29 @@
                     <div class = "map-us"></div>
                 </div>
             </div>
+            <h4>Geographic Distribution Patterns</h4>
             <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, 
                 with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, 
-                the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside 
+                the rest of the country's regions were under-represented, with Illinois and Ohio being the only two states outside 
                 of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. 
                 <strong>While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), 
                 the overall distribution has become much more even.</strong> The change is particularly noticeable for states such as California, 
                 Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, 
-                such as Midwest states outside of the Great Lakes region and the majority of Southern States.</h5>
+                such as midwest states outside of the Great Lakes region and the majority of southern states.</h5>
         </div>
         <div class = "viz-container">
             <div class = "row international">
                 <div class = "column">
-                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students,<strong> the percent of international students at BC has increased considerably since 1976.</strong></h5>  
+                    <br><br><br><br>
+                    <h4>International Student Distribution</h4>
+                    <h5>In addition to the increase in diversity in terms of geographic distribution of US-born students,<strong> the percent of international students at BC has increased considerably since 1976.</strong></h5>  
                 </div>
                 <div class = "column">
                     <div id = "intl-line-chart"></div>
                 </div>
             </div>
-            <h5>The importance of the increase in geographic distribution of the student body of BC lies in its impacts on the diversity of the school. As we have seen that the student body has become more ethnically diverse, diversity in geographic background provides an increase in diversity of thought in the student population as well.  Having come from all across the world, Boston College students will have had incresingly different life experiences prior to coming to BC. This increase has the ability to make an incredibly positive impact on the student experience at BC, allowing for people to come together and share their own experiences while learning those of others to create a more stimulating academic environment.</h5>
+            <h4>Importance of Diversity</h4>
+            <h5>The importance of the increase in geographic distribution of the student body at BC lies in its impacts on the diversity of the school. Diversity in geographic background provides an increase in diversity of thought in the student population as well.  Having come from all across the world, Boston College students will have had incresingly different life experiences prior to coming to BC. This increase has the ability to make an incredibly positive impact on the student experience at BC, allowing for people to come together and share their own experiences while learning those of others to create a more stimulating academic environment.</h5>
         </div>
         <h3>How Do BC's Demographics Compare to Peer Institutions?</h3>
         <h5>While Boston College has clearly become more a more ethnically and geographically diverse school over time, it is valuable to examine how its current gender and ethnic distributions compare to those of several peer institutions. We chose to focus specifically on Boston University (BU), Georgetown, Notre Dame, and Northeastern.</h5>
@@ -180,7 +185,9 @@
             <div class = "row comparison">
                 <div class = "column">
                     <div id = "stacked-bar"></div>
-                    <h5><br><br><br><strong>Each of the schools that we looked at (and the United States in general) were also 
+                    <br><br><br>
+                    <h4>Ethnicity Demographics</h4>
+                    <h5><strong>Each of the schools that we looked at (and the United States in general) were also 
                         majority-White, though BU, Georgetown and Northeastern are to a lesser extent.</strong> Notre Dame 
                         actually had a more prominent White majority than any other school, and was significantly less 
                         represented in the Asian population than the others. In general, the Asian population was 
@@ -190,13 +197,16 @@
                          being nearly non-existent at each university.</strong></h5>  
                 </div>
                 <div class = "column">
-                    <h5><br><br><br><strong>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </strong>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
+                    <br><br><br>
+                    <h4>Gender Demographics</h4>
+                    <h5><strong>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </strong>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
                     <div id = "stacked-bar2"></div>
                 </div>
             </div>
         </div>
         <div class = "viz-container">
-            <h3>Conclusion</h3>
+            <h2>Conclusion</h2>
+            
             <h5>
                 BC has consistently become more diverse in the gender, ethnic and international student distribution since 1975, 
                 though not by a huge margin. The gender distribution has evened out with a decreasing proportion of females and 
@@ -210,6 +220,7 @@
             </h5>
         </div>
     </div>
+    <br>
     <a class = "button about" href = "about.html">Project Information</a>
     <div id ="map-tooltip" class = "hidden tooltip"></div>
     <div id="bar-tooltip" class="hidden tooltip"></div>
