--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class = "container">
         <div class = "title">
             <h1>Project Information</h1>
-            <h3>Group Members: Christina MacKenzie, Grace Myers, Anna Bolger, and Anthony Manev</h3>
+            <h3 class = "members">Group Members: Christina MacKenzie, Grace Myers, Anna Bolger, and Anthony Manev</h3>
         </div>
         <div class = "response">
             <h2>Project Motivation</h2>
